--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,11 @@
 <h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<p>　こんにちは <%= @user.nickname %> </p>
+
+
+<h2>
+  ここに投稿したものを一覧で表示させます
+</h2>
+
+<%= link_to '投稿する' , new_articles_path(uid:@user.uid) %>
+
+<%= link_to 'ログアウト' , logout_path %>
