--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for articles_path do |f| %>
+<%= form_for @article, :url => {:action => 'update'} do |f| %>
 
     <p>
       <%= f.hidden_field :uid, :value => @article.uid %>
@@ -17,14 +17,12 @@
         <%= f.text_area :article, id: 'markdown', :value => @article.article %>
       </p>
 
-      <label>これはeditです</label>
-
       <p>
-        <%= f.submit 'save'%>
+        <%= f.submit 'save', class:'submit' %>
       </p>
+    </div>
 
 <% end %>
-</div>
 
 <div class="cell">
   <p id="preview"></p>
