update処理の追加

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -5,7 +5,7 @@
     </p>
 
     <p>
-      <%= f.hidden_field :uid, :value => @article.id %>
+      <%= f.hidden_field :id, :value => @article.id %>
     </p>
 
     <p>
