--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <div id="container">
       <%= yield %>
+      <%= render 'layouts/sid_bar' %>
+    </div>
   </body>
 </html>
