--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,32 +1,21 @@
+<div id="container_main">
 
+  <%= form_for @article, :url => {:action => 'update'} do |f| %>
 
-<%= form_for @article, :url => {:action => 'update'} do |f| %>
-
-    <p>
-      <%= f.hidden_field :uid, :value => @article.uid %>
-    </p>
-
-    <p>
-      <%= f.hidden_field :id, :value => @article.id %>
-    </p>
-
-    <p>
-      <%= f.text_field :title, id: 'title', :value => @article.title %>
-    </p>
-
-    <div class="cell">
       <p>
+        <%= f.hidden_field :uid, :value => @article.uid %>
+        <%= f.hidden_field :id, :value => @article.id %>
+      </p>
+
+      <div class="cell">
+        <%= f.text_field :title, id: 'title', :value => @article.title %>
         <%= f.text_area :article, id: 'markdown', :value => @article.article %>
-      </p>
+        <%= f.submit 'save', class: 'submit' %>
+      </div>
 
-      <p>
-        <%= f.submit 'save', class:'submit' %>
-      </p>
-    </div>
+  <% end %>
 
-<% end %>
-
-<div class="cell">
-  <p id="preview"></p>
+  <div class="cell">
+    <p id="preview"></p>
+  </div>
 </div>
-
