--- a/app/views/layouts/_sid_bar.html.erb
+++ b/app/views/layouts/_sid_bar.html.erb
@@ -1,3 +1,5 @@
+
+<% if @user != nil %>
 <div id="container_sidebar">
   <div class="side_bar">
 
@@ -15,3 +17,4 @@
   <%= link_to '投稿する', new_articles_path(uid: @user.uid), class: 'waves-effect waves-light btn' %>
 
 </div>
+<% end %>
