markdownを最初から読み込ませるように修正

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -8,7 +8,7 @@
       <div class="cell">
         <%= f.text_field :title, id: 'title' %>
         <%= f.text_area :article, id: 'markdown' %>
-        <%= f.submit 'save', class: 'submit' %>
+        <%= f.submit 'save', class: 'btn' %>
       </div>
   <% end %>
 
