--- a/app/views/layouts/_sid_bar.html.erb
+++ b/app/views/layouts/_sid_bar.html.erb
@@ -4,14 +4,10 @@
 
         <p> <%= @user.nickname %> </p>
 
-        <p><%= link_to '投稿する', new_articles_path(uid: @user.uid), class: 'waves-effect waves-light btn' %></p>
+        <p><%= link_to '投稿', new_articles_path(uid: @user.uid), class: 'waves-effect waves-light btn' %></p>
 
-        <div id="search" >
+        <div id="search">
           <p>Search!!!</p>
-          <div class="input-field">
-            <input id="hoge" type="text" class="validate">
-            <label for="hoge">フリーワード</label>
-          </div>
 
           <script>
               $(function () {
@@ -22,17 +18,23 @@
               });
           </script>
 
+          <%= form_tag(search_path, method: 'get') do %>
+            <div class="input-field">
+              <%= text_field_tag :free_word, params[:free_word], class:'validate' %>
+              <label for="hoge">フリーワード</label>
+            </div>
+            <p>Term</p>
 
-          <p>Term</p>
-          <p>Start<input type="date" class="datepicker"></p>
-          <p>End<input type="date" class="datepicker"></p>
-
-          <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>button</a>
-
-        </div>
-      </div>
+              <p>Start<%= date_field :start_date, params[:start_date] ,class:'date_picker' %></p>
+              <p>End<%= date_field :end_date, params[:end_date] ,class:'date_picker' %></p>
+              <%= submit_tag  '検索', class:'waves-effect waves-light btn' %>
+          <% end %>
+          </div>
 
 
-      <p><%= link_to 'ログアウト', logout_path, class: 'waves-effect waves-light btn' %></p>
-    </div>
+</div>
+
+
+<p><%= link_to 'Logout', logout_path, class: 'waves-effect waves-light btn' %></p>
+</div>
 <% end %>
