--- a/app/views/layouts/_sid_bar.html.erb
+++ b/app/views/layouts/_sid_bar.html.erb
@@ -13,7 +13,7 @@
               $(function () {
                   $('.datepicker').pickadate({
                       selectMonths: true,
-                      selectYears: 15 // Creates a dropdown of 15 years to control year
+                      selectYears: 15
                   });
               });
           </script>
